# libshim-demo

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
binary/: CMakeLists.txt  binary.cpp
injector/: CMakeLists.txt  injector.cpp  shim_demo  string_wrapper.h
